ServiceWorker: ignore AddMessageToConsole before process allocation

This patch is to skip EmbeddedWorkerInstance::AddMessageToConsole before process
is allocated.

When test is finishing, a renderer process on which the worker's script loading
is running is killed. This cancels the ServiceWorkerWriteToCacheJob
URLRequestJob. So ServiceWorkerWriteToCacheJob::NotifyFinishedCaching() calls
EmbeddedWorkerInstance::AddMessageToConsole.  At the same time with finishing,
ClearAllServiceWorkersForTest calls SWVersion::StopWorker. This causes a
situation that EmbeddedWorkerInstance is in the STARTING state, due to the
restart behavior of Stop, but not yet have a process when AddMessageToConsole is
called. So AddMessageToConsole would crash.

BUG=692439

Review-Url: https://codereview.chromium.org/2703153002
Cr-Commit-Position: refs/heads/master@{#451733}

Former-commit-id: acc713786ac1643648471dd35083ce760dcdfd30